--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body{
+     @apply text-[#21243D];
+}
+
+.custom-container {
+    @apply max-w-5xl mx-auto px-5;
+}
+
