update CRUD project

--- a/src/app/components/admin/Profiles/list-profile/list-profile.component.html
+++ b/src/app/components/admin/Profiles/list-profile/list-profile.component.html
@@ -4,7 +4,7 @@
             <h1 class="text-3xl font-bold text-gray-900">Admin Profile</h1>
         </div>
     </header>
-    <main>
+    <main class="max-w-5xl mx-auto px-5">
         <table>
             <thead>
                 <tr>
