--- a/src/app/components/admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/components/admin/navbar-admin/navbar-admin.component.html
@@ -20,10 +20,10 @@
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
                             Project</a>
 
-                        <!-- <a
+                        <a routerLink="/admin/blog"
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
-                            Đơn Hàng</a>
-
+                            Blog</a>
+                        <!-- 
                         <a
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
                             Tài Khoản</a>
