--- a/src/app/components/client/blog/blog.component.html
+++ b/src/app/components/client/blog/blog.component.html
@@ -5,49 +5,17 @@
         </div>
         <div class="blog ">
             <div class="grid md:grid-cols-1 gap-4  md:pr-[150px]">
-                <div class="blog-item ">
+                <div class="blog-item " *ngFor="let blog of listBlog">
                     <h3 class="blog-item__title">
-                        Making a design system from scratch
+                        {{blog.name}}
                     </h3>
                     <div class="blog-item__meta">
-                        <span>12 Feb 2020</span>
+                        <span>{{blog.time}}</span>
                         <span>|</span>
-                        <a href="" class="text-[#8695A4]">Design, Pattern</a>
+                        <a href="" class="text-[#8695A4]">{{blog.author}}</a>
                     </div>
-                    <p class="blog-item__desc">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
-                        Exercitation veniam consequat sunt nostrud amet.
-                    </p>
-                </div>
-                <div class="blog-item ">
-                    <h3 class="blog-item__title">
-                        Making a design system from scratch
-                    </h3>
-                    <div class="blog-item__meta">
-                        <span>12 Feb 2020</span>
-                        <span>|</span>
-                        <a href="" class="text-[#8695A4]">Design, Pattern</a>
-                    </div>
-                    <p class="blog-item__desc">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
-                        Exercitation veniam consequat sunt nostrud amet.
-                    </p>
-                </div>
-                <div class="blog-item ">
-                    <h3 class="blog-item__title">
-                        Making a design system from scratch
-                    </h3>
-                    <div class="blog-item__meta">
-                        <span>12 Feb 2020</span>
-                        <span>|</span>
-                        <a href="" class="text-[#8695A4]">Design, Pattern</a>
-                    </div>
-                    <p class="blog-item__desc">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                        amet sint. Velit officia consequat duis enim velit mollit.
-                        Exercitation veniam consequat sunt nostrud amet.
+                    <p class="blog-item__desc md:pr-[20px]">
+                        {{blog.desc}}
                     </p>
                 </div>
             </div>
