--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -6,9 +6,9 @@
             </div>
             <div class="flex justify-end ">
                 <ul class="hidden md:flex space-x-4 font-bold">
-                    <li><a routerLink="works">Works</a></li>
-                    <li><a routerLink="blog">Blog</a></li>
                     <li><a routerLink="/">Contact</a></li>
+                    <li><a routerLink="project">Project</a></li>
+                    <li><a routerLink="blog">Blog</a></li>
                 </ul>
             </div>
         </div>
