--- a/src/app/components/admin/Blog/list-blog/list-blog.component.html
+++ b/src/app/components/admin/Blog/list-blog/list-blog.component.html
@@ -1,20 +1,21 @@
 <div>
     <header class="bg-white shadow">
         <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8 grid grid-cols-2">
-            <h1 class="text-3xl font-bold text-gray-900">Admin Profile</h1>
+            <h1 class="text-3xl font-bold text-gray-900">Admin Blog</h1>
         </div>
     </header>
     <main class="max-w-7xl mx-auto px-5">
-        <nz-table #basicTable [nzData]="profileList">
+        <nz-table #basicTable [nzData]="listBlog">
             <thead>
                 <tr>
                     <th>STT</th>
-                    <th>Title</th>
+                    <th>Name</th>
+                    <th>Time</th>
+                    <th>Author</th>
                     <th>Desc</th>
-                    <th>Avatar</th>
                     <th scope="col"
                         class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                        <a routerLink="/admin/project/add" class="text-green-600 hover:text-green-900 text-center">
+                        <a routerLink="/admin/blog/add" class="text-green-600 hover:text-green-900 text-center">
                             <p>Add New</p>
                         </a>
                     </th>
@@ -23,18 +24,17 @@
             <tbody>
                 <tr *ngFor="let data of basicTable.data, let i = index">
                     <td>{{i+1}}</td>
-                    <td>{{data.tittle}}</td>
+                    <td>{{data.name}}</td>
+                    <td>{{data.time}}</td>
+                    <td>{{data.author}}</td>
                     <td>{{data.desc.slice(0,20)}}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500  "><img src={{data.avatar}} alt=""
-                            width="100" />
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-center">
-                        <a routerLink="/admin/project/{{data.id}}/edit"
+                    <td class=" text-center">
+                        <a routerLink="/admin/blog/{{data.id}}/edit"
                             class="text-indigo-600 hover:text-indigo-900 font-bold inline-block mx-[5px]">
                             <p>Cập Nhật</p>
                         </a>
-                        <button class="text-red-600 hover:text-red-900 font-bold
-                                                          inline-block">
+                        <button class="text-red-600 hover:text-red-900 font-bold inline-block"
+                            (click)="onRemoveBlog(data.id!)">
                             <p>Xóa</p>
                         </button>
                     </td>
