--- a/src/app/components/admin/Projects/list-project/list-project.component.html
+++ b/src/app/components/admin/Projects/list-project/list-project.component.html
@@ -4,64 +4,46 @@
             <h1 class="text-3xl font-bold text-gray-900">Admin Project</h1>
         </div>
     </header>
-    <main class="max-w-5xl mx-auto px-5">
-        <table>
+    <main class="max-w-7xl mx-auto px-5">
+        <nz-table #basicTable [nzData]="listProject">
             <thead>
                 <tr>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        STT
-                    </th>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Title
-                    </th>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        desc
-                    </th>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Avatar
-                    </th>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Category
-                    </th>
-                    <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Time
-                    </th>
+                    <th>STT</th>
+                    <th>Title</th>
+                    <th>Desc</th>
+                    <th>Avatar</th>
+                    <th>Category</th>
+                    <th>Time</th>
                     <th scope="col"
                         class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                        <a routerLink="/admin/project/add" class="text-green-600 hover:text-green-900">
-                            Add New</a>
+                        <a routerLink="/admin/project/add" class="text-green-600 hover:text-green-900 text-center">
+                            <p>Add New</p>
+                        </a>
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let project of listProject,let i = index">
-                    <td class="px-6 py-4 whitespace-nowrap">{{i+1}}</td>
-                    <td class="px-6 py-4 whitespace-nowrap"> <span class="">{{ project.name}}</span>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{project.desc.slice(0,20)}}
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500  "><img src={{project.avatar}} alt=""
+                <tr *ngFor="let data of basicTable.data,  let i = index">
+                    <td>{{i+1}}</td>
+                    <td>{{data.name}}</td>
+                    <td>{{data.desc.slice(0,20)}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500  "><img src={{data.avatar}} alt=""
                             width="100" />
                     </td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{project.category}}
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{project.time}}
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                        <a routerLink="/admin/project/{{project.id}}/edit"
+                    <td>{{data.category}}</td>
+                    <td>{{data.time}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
+                        <a routerLink="/admin/project/{{data.id}}/edit"
                             class="text-indigo-600 hover:text-indigo-900 font-bold inline-block mx-[5px]">
-                            Cập Nhật</a>
+                            <p>Cập Nhật</p>
+                        </a>
                         <button class="text-red-600 hover:text-red-900 font-bold
-                          inline-block" (click)="onRemoveProject(project.id!)">Xóa</button>
+                                              inline-block" (click)="onRemoveProject(data.id!)">
+                            <p>Xóa</p>
+                        </button>
                     </td>
                 </tr>
             </tbody>
-        </table>
+        </nz-table>
     </main>
 </div>
