--- a/src/app/components/admin/Profiles/list-profile/list-profile.component.html
+++ b/src/app/components/admin/Profiles/list-profile/list-profile.component.html
@@ -13,7 +13,7 @@
                     <th>Desc</th>
                     <th>Avatar</th>
                     <th scope="col"
-                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
+                        class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
                         <a routerLink="/admin/project/add" class="text-green-600 hover:text-green-900 text-center">
                             <p>Add New</p>
                         </a>
