--- a/src/app/components/admin/Blog/list-blog/list-blog.component.html
+++ b/src/app/components/admin/Blog/list-blog/list-blog.component.html
@@ -11,7 +11,7 @@
                     <th>STT</th>
                     <th>Name</th>
                     <th>Time</th>
-                    <th>Author</th>
+                    <th>Category</th>
                     <th>Desc</th>
                     <th scope="col"
                         class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
@@ -26,7 +26,7 @@
                     <td>{{i+1}}</td>
                     <td>{{data.name}}</td>
                     <td>{{data.time}}</td>
-                    <td>{{data.author}}</td>
+                    <td>{{data.cateBlog?.name}}</td>
                     <td>{{data.desc.slice(0,20)}}</td>
                     <td class=" text-center">
                         <a routerLink="/admin/blog/{{data.id}}/edit"
