--- a/src/app/components/admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/components/admin/navbar-admin/navbar-admin.component.html
@@ -23,6 +23,9 @@
                         <a routerLink="/admin/blog"
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
                             Blog</a>
+                        <a routerLink="/admin/category"
+                            class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                            Category</a>
                         <!-- 
                         <a
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
