--- a/src/app/components/client/blog/blog.component.html
+++ b/src/app/components/client/blog/blog.component.html
@@ -12,7 +12,7 @@
                     <div class="blog-item__meta">
                         <span>{{blog.time}}</span>
                         <span>|</span>
-                        <a href="" class="text-[#8695A4]">{{blog.author}}</a>
+                        <a href="" class="text-[#8695A4]">{{blog.cateBlog?.name}}</a>
                     </div>
                     <p class="blog-item__desc md:pr-[20px]">
                         {{blog.desc}}
