--- a/src/app/components/client/detal-project/detal-project.component.html
+++ b/src/app/components/client/detal-project/detal-project.component.html
@@ -7,7 +7,7 @@
             <div class="container-detail-post">
                 <div class="">
                     <span class="project__createat">{{detailProject.time}}</span>
-                    <span class="text-[20px]">{{detailProject.category}}, User Experience Design</span>
+                    <span class="text-[20px]">{{detailProject.cateProject?.name}}, User Experience Design</span>
                 </div>
                 <p class="text-[16px] my-5 inline-block md:pr-[20px]">{{detailProject.desc}}</p>
                 <div class="detail-project-img">
