--- a/src/app/components/client/project/project.component.html
+++ b/src/app/components/client/project/project.component.html
@@ -16,7 +16,7 @@
                             <h3 class="project__name">{{project.name}}</h3>
                             <div class="project__meta">
                                 <span class="project__createat">{{project.time}}</span>
-                                <a href="#" class="project__category">{{project.category}}</a>
+                                <a href="#" class="project__category">{{project.cateProject?.name}}</a>
                             </div>
                             <p class="md:pr-[20px]">
                                 {{project.desc}}
