--- a/src/app/components/admin/CategoryProject/list-cate-project/list-cate-project.component.html
+++ b/src/app/components/admin/CategoryProject/list-cate-project/list-cate-project.component.html
@@ -1,22 +1,18 @@
 <div>
     <header class="bg-white shadow">
         <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8 grid grid-cols-2">
-            <h1 class="text-3xl font-bold text-gray-900">Admin Project</h1>
+            <h1 class="text-3xl font-bold text-gray-900">Admin Category</h1>
         </div>
     </header>
     <main class="max-w-7xl mx-auto px-5">
-        <nz-table #basicTable [nzData]="listProject">
+        <nz-table #basicTable [nzData]="listCatePro">
             <thead>
                 <tr>
                     <th>STT</th>
-                    <th>Title</th>
-                    <th>Desc</th>
-                    <th>Avatar</th>
-                    <th>Category</th>
-                    <th>Time</th>
+                    <th>Name Category</th>
                     <th scope="col"
                         class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider text-center">
-                        <a routerLink="/admin/project/add" class="text-green-600 hover:text-green-900 text-center">
+                        <a routerLink="/admin/category/add" class="text-green-600 hover:text-green-900 text-center">
                             <p>Add New</p>
                         </a>
                     </th>
@@ -26,14 +22,8 @@
                 <tr *ngFor="let data of basicTable.data,  let i = index">
                     <td>{{i+1}}</td>
                     <td>{{data.name}}</td>
-                    <td>{{data.desc.slice(0,20)}}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500  "><img src={{data.avatar}} alt=""
-                            width="100" />
-                    </td>
-                    <td>{{data.cateProject?.name}}</td>
-                    <td>{{data.time}}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-center">
-                        <a routerLink="/admin/project/{{data.id}}/edit"
+                        <a routerLink="/admin/category/{{data.id}}/edit"
                             class="text-indigo-600 hover:text-indigo-900 font-bold inline-block mx-[5px]">
                             <p>Cập Nhật</p>
                         </a>
