--- a/src/app/components/admin/Projects/form-project/form-project.component.html
+++ b/src/app/components/admin/Projects/form-project/form-project.component.html
@@ -41,23 +41,27 @@
                                                     </nz-form-control>
                                                 </nz-form-item>
 
-                                                <div class="col-span-6 sm:col-span-4">
-                                                    <label class="block text-sm font-medium text-gray-700">Desc</label>
-                                                    <textarea type="text" [(ngModel)]="project.desc" name="desc"
-                                                        class="mt-1 py-2 px-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border border-gray-500 rounded-md "></textarea>
-                                                </div>
+                                                <nz-form-item class="col-span-6 sm:col-span-4">
+                                                    <nz-form-control nzErrorTip=" Please input your Category!">
+                                                        <label
+                                                            class="block text-sm font-medium text-gray-700">Desc</label>
+                                                        <textarea type="text" [(ngModel)]="project.desc" name="desc"
+                                                            formControlName="desc"
+                                                            class="mt-1 py-2 px-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border border-gray-500 rounded-md "></textarea>
+                                                    </nz-form-control>
+                                                </nz-form-item>
 
 
                                                 <nz-form-item class="col-span-6 sm:col-span-3">
-                                                    <nz-form-control nzErrorTip="Please input your Link Category!">
+                                                    <nz-form-control nzErrorTip=" Please input your Category!">
                                                         <h2 class="block text-sm font-medium text-gray-700">Category
                                                         </h2>
-                                                        <nz-input-group>
-                                                            <input type="text" placeholder="Enter Category "
-                                                                [(ngModel)]="project.category" name="name" nz-input
-                                                                formControlName="category"
-                                                                class="mt-1 py-2 px-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" />
-                                                        </nz-input-group>
+                                                        <select name="" id="" class="border-2 px-2 py-1"
+                                                            formControlName="cateProject" (change)="changeCate($event)"
+                                                            [(ngModel)]="project.cateProjectId">
+                                                            <option *ngFor="let catePro of ProjectCate"
+                                                                value={{catePro.id}}>{{catePro.name}}</option>
+                                                        </select>
                                                     </nz-form-control>
                                                 </nz-form-item>
 
