--- a/src/app/components/client/home-page/home-page.component.html
+++ b/src/app/components/client/home-page/home-page.component.html
@@ -14,7 +14,7 @@
                     <div class="recent-post__meta">
                         <span>{{blog.time}}</span>
                         <span>|</span>
-                        <a href="">{{blog.author}}</a>
+                        <a href="">{{blog.cateBlog?.name}}</a>
                     </div>
                     <p class="recent-post__desc">
                         {{blog.desc}}
@@ -41,7 +41,7 @@
                     <h3 class="project__name">{{project.name}}</h3>
                     <div class="project__meta">
                         <span class="project__createat">{{project.time}}</span>
-                        <a href="" class="project__category">{{project.category}}</a>
+                        <a href="" class="project__category">{{project.cateProject?.name}}</a>
                     </div>
                     <p>
                         {{project.desc}}
