update Category Blog

--- a/src/app/components/admin/navbar-admin/navbar-admin.component.html
+++ b/src/app/components/admin/navbar-admin/navbar-admin.component.html
@@ -25,7 +25,10 @@
                             Blog</a>
                         <a routerLink="/admin/category"
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
-                            Category</a>
+                            Category Project</a>
+                        <a routerLink="/admin/categoryBlog"
+                            class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                            Category Blog</a>
                         <!-- 
                         <a
                             class="navlinkadmin text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
