--- a/src/app/components/client/detal-blog/detal-blog.component.html
+++ b/src/app/components/client/detal-blog/detal-blog.component.html
@@ -7,7 +7,7 @@
             <div class="container-detail-post">
                 <div class="">
                     <span class="project__createat">{{detailBlog.time}}</span>
-                    <span class="text-[20px]">{{detailBlog.cateBlog?.name}}, User Experience Design</span>
+                    <span class="text-[20px]">{{detailBlog.cateBlog?.name}}</span>
                 </div>
                 <p class="text-[16px] my-5 inline-block md:pr-[20px]">{{detailBlog.desc}}</p>
             </div>
