--- a/src/app/components/client/header/header.component.html
+++ b/src/app/components/client/header/header.component.html
@@ -1,15 +1,18 @@
 <header>
     <div class="custom-container">
         <div class="py-5">
-            <div class="flex justify-end items-center">
-                <button class="md:hidden font-bold text-3xl"><i class="fa-solid fa-bars"></i></button>
-            </div>
-            <div class="flex justify-end ">
-                <ul class="hidden md:flex space-x-4 font-bold">
-                    <li><a routerLink="/">Contact</a></li>
-                    <li><a routerLink="project">Project</a></li>
-                    <li><a routerLink="blog">Blog</a></li>
-                </ul>
+            <div class="flex justify-between item-center text-2xl ">
+                <span class="font-logo"><a routerLink="/">Linh</a></span>
+                <div class="">
+                    <button class="md:hidden font-bold text-3xl"><i class="fa-solid fa-bars"></i></button>
+                </div>
+                <div class="hidden md:flex md:justify-end ">
+                    <ul class="hidden md:flex space-x-4 font-bold text-lg py-2">
+                        <li><a routerLink="/">Contact</a></li>
+                        <li><a routerLink="project">Project</a></li>
+                        <li><a routerLink="blog">Blog</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
